 * модуль создания отчётов для техподдержки теперь сохраняет все файлы конфигурации управляемой игры, а также содержимое файла Hosts, трассировки, замеры пингов и таблицу маршрутизации, что облегчает обнаружение проблем;
 * добавлена функция восстановления созданных программой архивов со страницы Резервные копии;
 * 

Версия 9.0 Final r574 (30 июня 2012):
 * применены изменения, сделанные ранее в Micro Hosts Editor;
 * улучшена работа модуля автоматического обновления программы;
 * исправлена ошибка, из-за которой модуль обновления не мог проверить наличие новой версии на сервере;
 * добавлена полная поддержка игры Nuclear Dawn;
 * добавлена полная поддержка следующих игр Valve:
   * Team Fortress 2 Beta;
   * Half-Life 2: Lost Coast;
   * Dota 2;
   * Dota 2 Beta;
 * добавлена полная поддержка следующих игр третьих сторон:
   * Postal III;
   * E.Y.E.: Divine Cybermancy;
   * Dark Messiah Might and Magic;
   * The Ship;
   * SiN Episodes: Emergence;
   * Vampire: The Masquerade - Bloodlines;
   * Zeno Clash;
   * Dear Esther;
   * Vindictus;
   * Bloody Good Time;
 * добавлена поддержка модификации Eternal Silence;
 * добавлена поддержка очистки кэшей и временных файлов, создаваемых при установке и обновлении игр с новой системой контента;
 * добавлена экспериментальная поддержка MacOS и GNU/Linux;
 * исправлена ошибка, из-за которой не работали кнопки справки контролов установки разрешения экрана;
 * добавлена возможность указания текстового редактора и оболочки (применяется в версии для Linux и MacOS);
 * полностью переработан диалог настроек программы: настройки разделены на общие и расширенные;
 * исправлена ошибка, из-за которой не восстанавливались резервные копии реестра;
 * добавлена функция создания резервных копий (в Zip-архивах) удаляемых файлов в модуле очистки;
 * улучшена работа модуля очистки;
 * исправлена ошибка, из-за которой не удалялись графические настройки GCF-игр из реестра;