@@ -5,6 +5,7 @@
  * исправлена ошибка в модуле создания отчётов для техподдержки, из-за которой текст кнопки не изменялось;
  * модуль создания отчётов для техподдержки теперь сохраняет все файлы конфигурации управляемой игры, а также содержимое файла Hosts, трассировки, замеры пингов и таблицу маршрутизации, что облегчает обнаружение проблем;
  * добавлена функция восстановления созданных программой архивов со страницы Резервные копии;
+ * добавлено корректное сохранение графических настроек GCF-игр, запущенных в GNU/Linux и MacOS;
  * 
 
 Версия 9.0 Final r574 (30 июня 2012):
